# fhe-master-thesis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: unit-test.yml
benchmark/: BENCHMARKS.md  CMakeLists.txt  Makefile
benchmark/src/: rgsw-rns.cpp  rgsw.cpp  write.cpp
examples/: compare.cpp  dot.cpp  sort.cpp
scripts/: parameter-search.py
src/client/include/: rgsw.h
src/core/: RGSW.cpp  RGSW.h  context-old.h  context.cpp  context.h  gadget-bv.cpp  gadget-bv.h  gadget-hybrid.cpp  gadget-hybrid.h  params.h  rgsw.h
src/core/client/: rgsw.h
src/core/include/: context-bv.h  context.h  ext-prod.h  gadget-bv.h  helpers.h  params.h  rgsw.h
src/core/lib/: context-bv.cpp  context.cpp  gadget-bv.cpp
src/core/server/: context.h
src/fhe/: ExpandRLWE.h
src/fhe/lib/: RGSW.cpp
src/old/fhe/include/: RGSW.h
src/old/protocol/: HomPlacing.cpp  HomPlacing.hpp  rlwe_rgsw.h
src/protocol/: HomPlacing.cpp  HomPlacing.hpp  rlwe_rgsw.cpp
src/server/: HomExpand.cpp  HomExpand.h  HomPlacing.cpp  HomPlacing.h  homplacing.cpp  homplacing.h  server.h  write.h
src/testing/: Timer.h
src/utils/: logging.h  timer.h
test/: BENCHMARKS.md  CMakeLists.txt  cli_params.h  common.h
test/src/: base.cpp  bv-rns.cpp  depth.cpp  homexpand.cpp  homplacing.cpp  hybrid-rns.cpp  hybrid.cpp  main.cpp  rgsw-bv.cpp  rgsw-coef.cpp  rgsw-rns.cpp  rgsw.cpp  serverwrite.cpp  write.cpp
tests/: CMakeLists.txt  algorithm-1.cpp  common.h  expand-rlwe.cpp  homexpand.cpp  homplacing.cpp  main.cpp  rgsw-s.cpp  rgsw.cpp  test-rgsw.cpp
tools/: setup.sh
